# delta

./: .gitconfig  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  .pylintrc  README.md  build.py  environment.yaml  prefect.yaml  pyproject.toml
.docker/: delta-broker.dockerfile  delta-ebest-feeder.dockerfile  delta.dev.yml  delta.dockerfile  docker-compose.dev.yml  prefect.dev.yml
.github/hooks/: commit-msg-check
delta/: __main__.py  broker.pyx  config.py
delta/adapter/ebest/: auth.py  constant.py  ebest.py  inblock.py  websocket.py
delta/broker/: zmq.pyx
delta/entrypoints/: broker.py  delta_message_broker.py  ebest_market_feeder.py
delta/etl/ebest/: parse_tick_logs_to_csv.py  update_master.py  upload_tick_files.py
delta/etl/flow/: ebest.py  ebest_master.py  tick_parser.py
delta/etl/task/: ebest.py
delta/network/: base.py  zmq.py
docs/: SNIPPETS.md  USEFUL_COMMANDS.md
notebooks/: Untitled.ipynb  Untitled1-Copy1.ipynb  Untitled1.ipynb
scripts/: res_converter.py
