[tool.poetry]
name = "delta"
version = "0.1.0"
description = "Data-driven Evaluation and Live Trading Algorithm"
authors = ["BrianBae <bohblue23@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
clipboard = "^0.0.4"
black = "^23.9.0"
ruff = "^0.0.287"
pre-commit = "^3.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
exclude-file = "delta/inblock.py"

[tool.ruff]
line-length = 120