[tool.poetry]
name = "delta"
version = "0.1.0"
description = "Data-driven Evaluation and Live Trading Algorithm"
authors = ["BrianBae <bohblue23@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.24.1"
prefect = "^2.13.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.5"
tqdm = "^4.66.1"
sentry-sdk = "^1.30.0"
pyzmq = "^25.1.1"
cython = "^3.0.2"
loguru = "^0.7.2"
pandas = "^2.1.1"
orjson = "3.9.6"

[tool.poetry.group.dev.dependencies]
clipboard = "^0.0.4"
black = "^23.9.0"
ruff = "^0.0.287"
pre-commit = "^3.4.0"
isort = "^5.12.0"
poetry2conda = {git = "https://github.com/bohblue2/poetry2conda.git", tag = "v0.3.0"}

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "delta"

[tool.poetry2conda.dependencies]
# Sometimes, a package on PyPI does not have the same name on conda.
# For example, tables and pytables, docker and docker-py.
# To change the name when converting to a conda environment file, you can set it as:
docker = { name = "docker-py" }

[tool.isort]
py_version = "311"
skip_glob = []
combine_as_imports = true
line_length = 120
ensure_newline_before_comments = true
force_single_line = true
single_line_exclusions = ["typing"]
include_trailing_comma = true
multi_line_output = 3
lines_after_imports = 2
use_parentheses = true
filter_files = true

[tool.codespell]
exclude-file = "delta/adapter/ebest/block.py"

[tool.ruff]
line-length = 120